# musicbox

./: .gitignore  README.md
config/: settings.json
docs/: build-checklist-v1.md  eink-panel-core-research-2026-03-07.md  eink-rendering-plan.md  hardware-dossier-2026-03-06.md  hardware-status.md  inventory.md  overlayfs-runbook.md  power-corruption-risk-report.md  psych-analysis-v2.md  roadmap-status-2026-02-28.md  rotary-wiring.md  specs-scraped.md  spotify-cache-setup.md  spotify-integration-research.md  spotify-web-api-notes.md  wiring-plan-v1.md
scripts/: dev-shell.sh  eink_lab.py  musicbox  spotify-cache-fetch  test_eink.py  test_inputs.py
src/: musicbox_web.py  status_app.py
src/musicbox_app/: __init__.py  config.py  eink.py  mappings.py  media.py  monitors.py  persistence.py  player.py  recorder.py  spotify_auth.py  spotify_cache.py  spotify_jobs.py  store.py  web.py
src/musicbox_app/static/: app.css  app.js
src/musicbox_app/templates/: index.html
src/musicbox_display/: __init__.py  panel.py  planner.py  types.py
src/waveshare_epd/: __init__.py  epd3in7.py  epdconfig.py
tests/: test_display_core.py  test_eink.py  test_player_manager.py  test_recorder.py
twinpeaks/: Cargo.toml  Cross.toml  PLAN.md  README.md
twinpeaks/src/: decoder.rs  engine.rs  ipc.rs  main.rs  output.rs  types.rs
