[package]
name = "twinpeaks"
version = "0.1.0"
edition = "2021"

[dependencies]
symphonia = { version = "0.5", features = ["mp3", "wav", "pcm"] }
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
